<resources>
    <string name="app_name">SSM</string>
    <string name="show_this_barcode_and_collect_your_bill">Show this BarCode and Collect your bill</string>
    <string name="thanx_for_using_have_a_great_day_d">Thanx for using.. Have a great day :D</string>
    <string name="start_shopping">START SHOPPING</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_account_register_here">Don\'t have a account? Register Here</string>
    <string name="already_have_an_account_login_now">Already have an account! Login now!</string>
    <string name="exit">Exit</string>
    <string name="view_cart">View Cart</string>
    <string name="total_0_rs">total=0 Rs</string>
    <string name="done">DONE</string>
    <string name="_1">1</string>
    <string name="textview">TextView</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="add">add</string>
    <string name="cencel">cencel</string>
    <string name="button55">Button</string>
</resources>
