<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/byebye"
        android:gravity="center"
        android:text="@string/show_this_barcode_and_collect_your_bill"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/finalBarCode"
        android:src="@drawable/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/thanx"
        android:gravity="center"
        android:text="@string/thanx_for_using_have_a_great_day_d"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>