<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/android1">



    <EditText
        android:id="@+id/email"
        android:layout_marginTop="320dp"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="30dp"
        android:background="@drawable/square_button"
        android:hint="@string/email"
        tools:targetApi="o"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="70dp"
        android:background="@drawable/square_button"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="415dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/btcolor"
        android:background="@drawable/rounded_button"
        android:text="@string/log_in"/>

    <TextView
        android:id="@+id/goto_register"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="472dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/don_t_have_a_account_register_here"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>