<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/android">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/square_button"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" tools:targetApi="o" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/square_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_below="@id/name" tools:targetApi="o" />

    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/square_button"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:layout_below="@id/email"
        android:inputType="phone" tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:background="@drawable/square_button"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mobile_no"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/cnf_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:layout_margin="5dp"
        android:background="@drawable/square_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/btcolor"
        android:layout_below="@id/cnf_password"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/already_have_an_account_n_t_then_click_here"
        android:textColor="@color/colorPrimary"
        android:focusable="true" />

</RelativeLayout>